feat: Validate and send error messages for Create page

--- a/DiaryApp/Views/DiaryEntries/Diary.cshtml
+++ b/DiaryApp/Views/DiaryEntries/Diary.cshtml
@@ -33,7 +33,7 @@
                 <tr class="text-dark">
                     <td>@entry.Title</td>
                     <td class="col-md-4" style="">@entry.Content</td>
-                    <td>@entry.Created</td>
+                    <td>@entry.Created.ToString("dd/MM/yyyy")</td>
                     <td>
                         <a class="btn btn-primary">Edit or Delete</a>
                     </td>
