--- a/DiaryApp/Views/DiaryEntries/Create.cshtml
+++ b/DiaryApp/Views/DiaryEntries/Create.cshtml
@@ -15,14 +15,17 @@
                         <div class="form-group mb-3">
                             <label asp-for="Title" class="form-label">Title</label>
                             <input asp-for="Title" class="form-control text-dark" placeholder="Enter a Title"/>
+                            <span asp-validation-for="Title" class="text-danger"></span>
                         </div>
                         <div class="form-group mb-3">
                             <label asp-for="Content" class="form-label">Content</label>
                             <input asp-for="Content" class="form-control text-dark" placeholder="How was your day?" />
+                            <span asp-validation-for="Content" class="text-danger"></span>
                         </div>
                         <div class="form-group mb-3">
                             <label asp-for="Created" class="form-label">Date</label>
                             <input asp-for="Created" class="form-control text-dark" type="date"/>
+                            <span asp-validation-for="Created" class="text-danger" placeholder="The Date field is required"></span>
                         </div>
                         <div class="d-flex justify-content-between mb-3">
                             <button type="submit" class="btn btn-primary">Create</button>
